--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Use TDD to build a To-do app",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --watchAll --coverage"
   },
   "repository": {
     "type": "git",
